--- a/sampleapp/src/main/webapp/WEB-INF/web.xml
+++ b/sampleapp/src/main/webapp/WEB-INF/web.xml
@@ -48,7 +48,7 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	<servlet-mapping>
+	<servlet-mapping id="ServletMapping_1530852454115">
 		<servlet-name>app</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
